--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
+    "@netlify/blobs": "^4.2.0",
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "lambda-multipart-parser": "^1.0.1",
